dummy test works

--- a/KHHealthCareProj/Base.lproj/Main.storyboard
+++ b/KHHealthCareProj/Base.lproj/Main.storyboard
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Results Page View Controller-->
+        <scene sceneID="n35-QQ-UR4">
+            <objects>
+                <viewController id="Pb1-iY-Je6" customClass="ResultsPageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uCr-21-O91"/>
+                        <viewControllerLayoutGuide type="bottom" id="KUE-AX-gf2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QO0-sv-7Vx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Opf-f8-JIN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="68" y="523"/>
+        </scene>
         <!--Sign In View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -17,19 +36,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PocketDoc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8P-77-fTV">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PocketDoc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8P-77-fTV">
                                 <rect key="frame" x="186" y="36" width="228" height="89"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="228" id="OE0-Bp-pPl"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username/Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q6J-2K-Lxr">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username/Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q6J-2K-Lxr">
                                 <rect key="frame" x="104" y="196" width="393" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="L7R-1w-MF0"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ibf-qe-3Qh">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ibf-qe-3Qh">
                                 <rect key="frame" x="433" y="523" width="141" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="141" id="S2e-qn-QyX"/>
+                                </constraints>
                                 <state key="normal" title="Skip for now">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -37,8 +65,11 @@
                                     <action selector="skipSigninButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZH0-7Q-0jc"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="riB-ti-YSz">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="riB-ti-YSz">
                                 <rect key="frame" x="394" y="377" width="83" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="83" id="tFx-X3-fZx"/>
+                                </constraints>
                                 <state key="normal" title="LOG IN">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -46,8 +77,12 @@
                                     <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mFB-mu-7O2"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxI-xu-llP">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxI-xu-llP">
                                 <rect key="frame" x="130" y="377" width="85" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Tjg-gD-rXx"/>
+                                    <constraint firstAttribute="width" constant="85" id="nW5-4T-Gs3"/>
+                                </constraints>
                                 <state key="normal" title="SIGN UP">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -55,13 +90,33 @@
                                     <action selector="signupButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6ee-F3-NP6"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4je-tq-sB3">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4je-tq-sB3">
                                 <rect key="frame" x="104" y="254" width="393" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="vA9-BP-YAA"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.21960784310000001" green="0.87058823529999996" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ibf-qe-3Qh" secondAttribute="trailing" constant="6" id="BM4-6p-QBk"/>
+                            <constraint firstItem="q6J-2K-Lxr" firstAttribute="centerX" secondItem="t8P-77-fTV" secondAttribute="centerX" id="EOk-wr-BdL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sxI-xu-llP" secondAttribute="bottom" constant="193" id="KJ4-e7-xDL"/>
+                            <constraint firstItem="q6J-2K-Lxr" firstAttribute="leading" secondItem="4je-tq-sB3" secondAttribute="leading" id="LED-VE-Ubd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ibf-qe-3Qh" secondAttribute="bottom" constant="47" id="NPH-0l-mAY"/>
+                            <constraint firstItem="4je-tq-sB3" firstAttribute="top" secondItem="q6J-2K-Lxr" secondAttribute="bottom" constant="28" id="QaZ-0H-EGj"/>
+                            <constraint firstItem="sxI-xu-llP" firstAttribute="top" secondItem="4je-tq-sB3" secondAttribute="bottom" constant="93" id="Ulb-vt-jaG"/>
+                            <constraint firstItem="q6J-2K-Lxr" firstAttribute="trailing" secondItem="4je-tq-sB3" secondAttribute="trailing" id="Uti-ky-oAE"/>
+                            <constraint firstItem="t8P-77-fTV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="XMJ-Cc-w7M"/>
+                            <constraint firstAttribute="trailing" secondItem="riB-ti-YSz" secondAttribute="trailing" constant="123" id="Zr2-HD-chz"/>
+                            <constraint firstItem="q6J-2K-Lxr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="84" id="bCy-5p-it5"/>
+                            <constraint firstItem="sxI-xu-llP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="130" id="ecF-Uq-H7j"/>
+                            <constraint firstItem="q6J-2K-Lxr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r8Y-Gs-G2z"/>
+                            <constraint firstItem="q6J-2K-Lxr" firstAttribute="top" secondItem="t8P-77-fTV" secondAttribute="bottom" constant="71" id="weS-wW-pcV"/>
+                            <constraint firstItem="riB-ti-YSz" firstAttribute="baseline" secondItem="sxI-xu-llP" secondAttribute="baseline" id="xWc-Ts-p5n"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="passwordTF" destination="4je-tq-sB3" id="awT-Jc-pl5"/>
@@ -85,26 +140,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iHZ-DF-BAL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iHZ-DF-BAL">
                                 <rect key="frame" x="0.0" y="179" width="600" height="139"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="139" id="ZLE-rc-DM1"/>
+                                </constraints>
                                 <state key="normal" title="Quick Checkup">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="89j-rY-WuD">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="89j-rY-WuD">
                                 <rect key="frame" x="180" y="53" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="7dH-5E-iBD"/>
+                                    <constraint firstAttribute="width" constant="240" id="Vdq-WA-Dzd"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZe-P4-FLd">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZe-P4-FLd">
                                 <rect key="frame" x="0.0" y="326" width="600" height="156"/>
                                 <state key="normal" title="Complete Exam">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="fullExamButton:" destination="J4H-9y-LGI" eventType="touchUpInside" id="wP8-Vc-wyN"/>
+                                    <segue destination="Pb1-iY-Je6" kind="show" id="TIw-PD-vJK"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.2196078431372549" green="0.87058823529411766" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="EZe-P4-FLd" firstAttribute="leading" secondItem="n1R-XU-pLu" secondAttribute="leading" id="707-Xq-1fH"/>
+                            <constraint firstItem="iHZ-DF-BAL" firstAttribute="trailing" secondItem="EZe-P4-FLd" secondAttribute="trailing" id="MAm-jX-BVy"/>
+                            <constraint firstAttribute="trailing" secondItem="EZe-P4-FLd" secondAttribute="trailing" id="Ps5-Uz-n0C"/>
+                            <constraint firstItem="iHZ-DF-BAL" firstAttribute="top" secondItem="wGy-bh-2jQ" secondAttribute="bottom" constant="159" id="Qbx-ZY-11Z"/>
+                            <constraint firstItem="EZe-P4-FLd" firstAttribute="top" secondItem="iHZ-DF-BAL" secondAttribute="bottom" constant="8" symbolic="YES" id="Ubl-BM-tue"/>
+                            <constraint firstItem="89j-rY-WuD" firstAttribute="top" secondItem="wGy-bh-2jQ" secondAttribute="bottom" constant="33" id="Y6B-jI-o8j"/>
+                            <constraint firstItem="89j-rY-WuD" firstAttribute="centerX" secondItem="iHZ-DF-BAL" secondAttribute="centerX" id="iPK-hk-Iz9"/>
+                            <constraint firstItem="m85-5j-WTA" firstAttribute="top" secondItem="EZe-P4-FLd" secondAttribute="bottom" constant="118" id="nDz-p9-1Cd"/>
+                            <constraint firstItem="EZe-P4-FLd" firstAttribute="leading" secondItem="iHZ-DF-BAL" secondAttribute="leading" id="oC6-t0-OBi"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="b27-Km-thy" kind="show" id="XIf-bB-AtE"/>
